// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statsAPI statsAPI/basic should have stats 1`] = `
Object {
  assets: Array [
    Object {
      auxiliaryChunkIdHints: Array [],
      auxiliaryChunkNames: Array [],
      auxiliaryChunks: Array [],
      cached: false,
      chunkIdHints: Array [],
      chunkNames: Array [
        main,
      ],
      chunks: Array [
        909,
      ],
      emitted: true,
      filteredRelated: 0,
      info: Object {
        chunkhash: Array [],
        contenthash: Array [],
        fullhash: Array [],
        isOverSizeLimit: false,
        javascriptModule: false,
        minimized: true,
        related: Object {},
      },
      isOverSizeLimit: false,
      name: main.js,
      related: Array [],
      size: 204,
      type: asset,
    },
  ],
  assetsByChunkName: Object {
    main: Array [
      main.js,
    ],
  },
  children: Array [],
  chunks: Array [
    Object {
      auxiliaryFiles: Array [],
      children: Array [],
      childrenByOrder: Object {},
      entry: true,
      files: Array [
        main.js,
      ],
      filteredModules: undefined,
      hash: 8bdcdc6d0d3368e4,
      id: 909,
      idHints: Array [],
      initial: true,
      modules: Array [
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [
            909,
          ],
          codeGenerated: true,
          dependent: false,
          depth: 0,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: 585,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
          index: 0,
          index2: 0,
          issuer: undefined,
          issuerId: undefined,
          issuerName: undefined,
          issuerPath: undefined,
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/a.js,
          nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
          optimizationBailout: Array [
            Statement with side_effects in source code at ./fixtures/a.js<LINE_COL_RANGE>,
            ModuleConcatenation bailout: Module is not an ECMAScript module,
          ],
          optional: false,
          orphan: false,
          postOrderIndex: 0,
          preOrderIndex: 0,
          providedExports: null,
          reasons: Array [
            Object {
              active: true,
              explanation: undefined,
              loc: undefined,
              moduleId: null,
              resolvedModuleId: null,
              type: entry,
              userRequest: ./fixtures/a,
            },
            Object {
              active: true,
              explanation: undefined,
              loc: undefined,
              moduleId: 585,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
              moduleName: ./fixtures/a.js,
              resolvedModule: ./fixtures/a.js,
              resolvedModuleId: 585,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
              type: cjs self exports reference,
              userRequest: self,
            },
          ],
          size: 55,
          sizes: Object {
            javascript: 55,
          },
          source: module.exports = function a() {
	return "This is a";
};,
          type: module,
          usedExports: null,
          warnings: 0,
        },
      ],
      names: Array [
        main,
      ],
      origins: Array [
        Object {
          loc: main,
          module: ,
          moduleId: undefined,
          moduleIdentifier: ,
          moduleName: ,
          request: ./fixtures/a,
        },
      ],
      parents: Array [],
      reason: undefined,
      rendered: true,
      runtime: Array [
        main,
      ],
      siblings: Array [],
      size: 55,
      sizes: Object {
        javascript: 55,
      },
      type: chunk,
    },
  ],
  entrypoints: Object {
    main: Object {
      assets: Array [
        Object {
          name: main.js,
          size: 204,
        },
      ],
      assetsSize: 204,
      auxiliaryAssets: Array [],
      auxiliaryAssetsSize: 0,
      childAssets: Object {},
      children: Object {},
      chunks: Array [
        909,
      ],
      filteredAssets: 0,
      isOverSizeLimit: false,
      name: main,
    },
  },
  env: undefined,
  errors: Array [],
  errorsCount: 0,
  filteredAssets: undefined,
  filteredModules: undefined,
  hash: 74404557098e37ce,
  modules: Array [
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: undefined,
      depth: 0,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: 585,
      identifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
      index: 0,
      index2: 0,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/a.js,
      nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
      optimizationBailout: Array [
        Statement with side_effects in source code at ./fixtures/a.js<LINE_COL_RANGE>,
        ModuleConcatenation bailout: Module is not an ECMAScript module,
      ],
      optional: false,
      orphan: false,
      postOrderIndex: 0,
      preOrderIndex: 0,
      providedExports: null,
      reasons: Array [
        Object {
          active: true,
          explanation: undefined,
          loc: undefined,
          moduleId: null,
          resolvedModuleId: null,
          type: entry,
          userRequest: ./fixtures/a,
        },
        Object {
          active: true,
          explanation: undefined,
          loc: undefined,
          moduleId: 585,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
          moduleName: ./fixtures/a.js,
          resolvedModule: ./fixtures/a.js,
          resolvedModuleId: 585,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
          type: cjs self exports reference,
          userRequest: self,
        },
      ],
      size: 55,
      sizes: Object {
        javascript: 55,
      },
      source: module.exports = function a() {
	return "This is a";
};,
      type: module,
      usedExports: null,
      warnings: 0,
    },
  ],
  namedChunkGroups: Object {
    main: Object {
      assets: Array [
        Object {
          name: main.js,
          size: 204,
        },
      ],
      assetsSize: 204,
      auxiliaryAssets: Array [],
      auxiliaryAssetsSize: 0,
      childAssets: Object {},
      children: Object {},
      chunks: Array [
        909,
      ],
      filteredAssets: 0,
      isOverSizeLimit: false,
      name: main,
    },
  },
  outputPath: <TEST_TOOLS_ROOT>/dist,
  publicPath: auto,
  warnings: Array [],
  warningsCount: 0,
}
`;

exports[`statsAPI statsAPI/exports should have usedExports and providedExports stats 1`] = `
Object {
  assets: Array [
    Object {
      auxiliaryChunkIdHints: Array [],
      auxiliaryChunkNames: Array [],
      auxiliaryChunks: Array [],
      cached: false,
      chunkIdHints: Array [],
      chunkNames: Array [
        main,
      ],
      chunks: Array [
        909,
      ],
      emitted: true,
      filteredRelated: 0,
      info: Object {
        chunkhash: Array [],
        contenthash: Array [],
        fullhash: Array [],
        isOverSizeLimit: false,
        javascriptModule: false,
        minimized: true,
        related: Object {},
      },
      isOverSizeLimit: false,
      name: main.js,
      related: Array [],
      size: 412,
      type: asset,
    },
  ],
  assetsByChunkName: Object {
    main: Array [
      main.js,
    ],
  },
  children: Array [],
  chunks: Array [
    Object {
      auxiliaryFiles: Array [],
      children: Array [],
      childrenByOrder: Object {},
      entry: true,
      files: Array [
        main.js,
      ],
      filteredModules: undefined,
      hash: 1fbc0b3545db2a93,
      id: 909,
      idHints: Array [],
      initial: true,
      modules: Array [
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: false,
          cacheable: true,
          cached: false,
          chunks: Array [
            909,
          ],
          codeGenerated: true,
          dependent: false,
          depth: 0,
          errors: 0,
          failed: false,
          filteredModules: undefined,
          filteredReasons: undefined,
          id: 533,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js|0e47874493fdefd960142324ecb88ecc,
          index: 0,
          index2: 3,
          issuer: undefined,
          issuerId: undefined,
          issuerName: undefined,
          issuerPath: undefined,
          layer: undefined,
          moduleType: javascript/esm,
          modules: Array [
            Object {
              assets: Array [],
              buildTimeExecuted: false,
              built: true,
              cacheable: true,
              cached: false,
              chunks: Array [],
              codeGenerated: false,
              dependent: true,
              depth: 0,
              errors: 0,
              failed: false,
              filteredReasons: undefined,
              id: undefined,
              identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              index: 0,
              index2: 3,
              issuer: undefined,
              issuerId: undefined,
              issuerName: undefined,
              issuerPath: undefined,
              layer: undefined,
              moduleType: javascript/auto,
              name: ./fixtures/esm/abc.js,
              nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              optimizationBailout: Array [
                ModuleConcatenation bailout: Module is an entry point,
              ],
              optional: false,
              orphan: true,
              postOrderIndex: 3,
              preOrderIndex: 0,
              providedExports: Array [],
              reasons: Array [],
              size: 80,
              sizes: Object {
                javascript: 80,
              },
              type: module,
              usedExports: Array [],
              warnings: 0,
            },
            Object {
              assets: Array [],
              buildTimeExecuted: false,
              built: true,
              cacheable: true,
              cached: false,
              chunks: Array [],
              codeGenerated: false,
              dependent: true,
              depth: 1,
              errors: 0,
              failed: false,
              filteredReasons: undefined,
              id: undefined,
              identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/a.js,
              index: 1,
              index2: 0,
              issuer: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              issuerId: undefined,
              issuerName: ./fixtures/esm/abc.js,
              issuerPath: Array [
                Object {
                  id: undefined,
                  identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  name: ./fixtures/esm/abc.js,
                },
              ],
              layer: undefined,
              moduleType: javascript/auto,
              name: ./fixtures/esm/a.js,
              nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/a.js,
              optimizationBailout: Array [],
              optional: false,
              orphan: true,
              postOrderIndex: 0,
              preOrderIndex: 1,
              providedExports: Array [
                a,
                default,
              ],
              reasons: Array [
                Object {
                  active: true,
                  explanation: undefined,
                  loc: 1:0-24,
                  moduleId: undefined,
                  moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import,
                  userRequest: ./a,
                },
                Object {
                  active: true,
                  explanation: undefined,
                  loc: 5:0-1,
                  moduleId: undefined,
                  moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import specifier,
                  userRequest: ./a,
                },
              ],
              size: 37,
              sizes: Object {
                javascript: 37,
              },
              type: module,
              usedExports: Array [
                a,
              ],
              warnings: 0,
            },
            Object {
              assets: Array [],
              buildTimeExecuted: false,
              built: true,
              cacheable: true,
              cached: false,
              chunks: Array [],
              codeGenerated: false,
              dependent: true,
              depth: 1,
              errors: 0,
              failed: false,
              filteredReasons: undefined,
              id: undefined,
              identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/b.js,
              index: 2,
              index2: 1,
              issuer: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              issuerId: undefined,
              issuerName: ./fixtures/esm/abc.js,
              issuerPath: Array [
                Object {
                  id: undefined,
                  identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  name: ./fixtures/esm/abc.js,
                },
              ],
              layer: undefined,
              moduleType: javascript/auto,
              name: ./fixtures/esm/b.js,
              nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/b.js,
              optimizationBailout: Array [],
              optional: false,
              orphan: true,
              postOrderIndex: 1,
              preOrderIndex: 2,
              providedExports: Array [
                b,
                default,
              ],
              reasons: Array [
                Object {
                  active: true,
                  explanation: undefined,
                  loc: 2:0-20,
                  moduleId: undefined,
                  moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import,
                  userRequest: ./b,
                },
                Object {
                  active: true,
                  explanation: undefined,
                  loc: 5:3-4,
                  moduleId: undefined,
                  moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import specifier,
                  userRequest: ./b,
                },
              ],
              size: 38,
              sizes: Object {
                javascript: 38,
              },
              type: module,
              usedExports: Array [
                default,
              ],
              warnings: 0,
            },
            Object {
              assets: Array [],
              buildTimeExecuted: false,
              built: true,
              cacheable: true,
              cached: false,
              chunks: Array [],
              codeGenerated: false,
              dependent: true,
              depth: 1,
              errors: 0,
              failed: false,
              filteredReasons: undefined,
              id: undefined,
              identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/c.js,
              index: 3,
              index2: 2,
              issuer: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              issuerId: undefined,
              issuerName: ./fixtures/esm/abc.js,
              issuerPath: Array [
                Object {
                  id: undefined,
                  identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  name: ./fixtures/esm/abc.js,
                },
              ],
              layer: undefined,
              moduleType: javascript/auto,
              name: ./fixtures/esm/c.js,
              nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/c.js,
              optimizationBailout: Array [],
              optional: false,
              orphan: true,
              postOrderIndex: 2,
              preOrderIndex: 3,
              providedExports: Array [
                c,
                default,
              ],
              reasons: Array [
                Object {
                  active: true,
                  explanation: undefined,
                  loc: 3:0-25,
                  moduleId: undefined,
                  moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import,
                  userRequest: ./c,
                },
                Object {
                  active: true,
                  explanation: undefined,
                  loc: 5:6-7,
                  moduleId: undefined,
                  moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  moduleName: ./fixtures/esm/abc.js,
                  resolvedModule: ./fixtures/esm/abc.js,
                  resolvedModuleId: undefined,
                  resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
                  type: esm import specifier,
                  userRequest: ./c,
                },
              ],
              size: 37,
              sizes: Object {
                javascript: 37,
              },
              type: module,
              usedExports: true,
              warnings: 0,
            },
          ],
          name: ./fixtures/esm/abc.js + 3 modules,
          nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          optimizationBailout: Array [],
          optional: false,
          orphan: false,
          postOrderIndex: 3,
          preOrderIndex: 0,
          providedExports: Array [],
          reasons: Array [
            Object {
              active: true,
              explanation: undefined,
              loc: undefined,
              moduleId: null,
              resolvedModuleId: null,
              type: entry,
              userRequest: ./fixtures/esm/abc,
            },
          ],
          size: 192,
          sizes: Object {
            javascript: 192,
          },
          type: module,
          usedExports: Array [],
          warnings: 0,
        },
      ],
      names: Array [
        main,
      ],
      origins: Array [
        Object {
          loc: main,
          module: ,
          moduleId: undefined,
          moduleIdentifier: ,
          moduleName: ,
          request: ./fixtures/esm/abc,
        },
      ],
      parents: Array [],
      reason: undefined,
      rendered: true,
      runtime: Array [
        main,
      ],
      siblings: Array [],
      size: 192,
      sizes: Object {
        javascript: 192,
        runtime: 647,
      },
      type: chunk,
    },
  ],
  entrypoints: Object {
    main: Object {
      assets: Array [
        Object {
          name: main.js,
          size: 412,
        },
      ],
      assetsSize: 412,
      auxiliaryAssets: Array [],
      auxiliaryAssetsSize: 0,
      childAssets: Object {},
      children: Object {},
      chunks: Array [
        909,
      ],
      filteredAssets: 0,
      isOverSizeLimit: false,
      name: main,
    },
  },
  errors: Array [],
  errorsCount: 0,
  filteredAssets: undefined,
  filteredModules: undefined,
  hash: 8ed9b9df103cad73,
  modules: Array [
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [],
      codeGenerated: false,
      dependent: undefined,
      depth: 0,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: undefined,
      identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
      index: 0,
      index2: 3,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/esm/abc.js,
      nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
      optimizationBailout: Array [
        ModuleConcatenation bailout: Module is an entry point,
      ],
      optional: false,
      orphan: true,
      postOrderIndex: 3,
      preOrderIndex: 0,
      providedExports: Array [],
      reasons: Array [],
      size: 80,
      sizes: Object {
        javascript: 80,
      },
      type: module,
      usedExports: Array [],
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: false,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: undefined,
      depth: 0,
      errors: 0,
      failed: false,
      filteredModules: undefined,
      filteredReasons: undefined,
      id: 533,
      identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js|0e47874493fdefd960142324ecb88ecc,
      index: 0,
      index2: 3,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: javascript/esm,
      modules: Array [
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [],
          codeGenerated: false,
          dependent: undefined,
          depth: 0,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: undefined,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          index: 0,
          index2: 3,
          issuer: undefined,
          issuerId: undefined,
          issuerName: undefined,
          issuerPath: undefined,
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/esm/abc.js,
          nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          optimizationBailout: Array [
            ModuleConcatenation bailout: Module is an entry point,
          ],
          optional: false,
          orphan: true,
          postOrderIndex: 3,
          preOrderIndex: 0,
          providedExports: Array [],
          reasons: Array [],
          size: 80,
          sizes: Object {
            javascript: 80,
          },
          type: module,
          usedExports: Array [],
          warnings: 0,
        },
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [],
          codeGenerated: false,
          dependent: undefined,
          depth: 1,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: undefined,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/a.js,
          index: 1,
          index2: 0,
          issuer: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          issuerId: undefined,
          issuerName: ./fixtures/esm/abc.js,
          issuerPath: Array [
            Object {
              id: undefined,
              identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              name: ./fixtures/esm/abc.js,
            },
          ],
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/esm/a.js,
          nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/a.js,
          optimizationBailout: Array [],
          optional: false,
          orphan: true,
          postOrderIndex: 0,
          preOrderIndex: 1,
          providedExports: Array [
            a,
            default,
          ],
          reasons: Array [
            Object {
              active: true,
              explanation: undefined,
              loc: 1:0-24,
              moduleId: undefined,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              type: esm import,
              userRequest: ./a,
            },
            Object {
              active: true,
              explanation: undefined,
              loc: 5:0-1,
              moduleId: undefined,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              type: esm import specifier,
              userRequest: ./a,
            },
          ],
          size: 37,
          sizes: Object {
            javascript: 37,
          },
          type: module,
          usedExports: Array [
            a,
          ],
          warnings: 0,
        },
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [],
          codeGenerated: false,
          dependent: undefined,
          depth: 1,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: undefined,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/b.js,
          index: 2,
          index2: 1,
          issuer: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          issuerId: undefined,
          issuerName: ./fixtures/esm/abc.js,
          issuerPath: Array [
            Object {
              id: undefined,
              identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              name: ./fixtures/esm/abc.js,
            },
          ],
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/esm/b.js,
          nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/b.js,
          optimizationBailout: Array [],
          optional: false,
          orphan: true,
          postOrderIndex: 1,
          preOrderIndex: 2,
          providedExports: Array [
            b,
            default,
          ],
          reasons: Array [
            Object {
              active: true,
              explanation: undefined,
              loc: 2:0-20,
              moduleId: undefined,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              type: esm import,
              userRequest: ./b,
            },
            Object {
              active: true,
              explanation: undefined,
              loc: 5:3-4,
              moduleId: undefined,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              type: esm import specifier,
              userRequest: ./b,
            },
          ],
          size: 38,
          sizes: Object {
            javascript: 38,
          },
          type: module,
          usedExports: Array [
            default,
          ],
          warnings: 0,
        },
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [],
          codeGenerated: false,
          dependent: undefined,
          depth: 1,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: undefined,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/c.js,
          index: 3,
          index2: 2,
          issuer: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          issuerId: undefined,
          issuerName: ./fixtures/esm/abc.js,
          issuerPath: Array [
            Object {
              id: undefined,
              identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              name: ./fixtures/esm/abc.js,
            },
          ],
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/esm/c.js,
          nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/c.js,
          optimizationBailout: Array [],
          optional: false,
          orphan: true,
          postOrderIndex: 2,
          preOrderIndex: 3,
          providedExports: Array [
            c,
            default,
          ],
          reasons: Array [
            Object {
              active: true,
              explanation: undefined,
              loc: 3:0-25,
              moduleId: undefined,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              type: esm import,
              userRequest: ./c,
            },
            Object {
              active: true,
              explanation: undefined,
              loc: 5:6-7,
              moduleId: undefined,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              moduleName: ./fixtures/esm/abc.js,
              resolvedModule: ./fixtures/esm/abc.js,
              resolvedModuleId: undefined,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
              type: esm import specifier,
              userRequest: ./c,
            },
          ],
          size: 37,
          sizes: Object {
            javascript: 37,
          },
          type: module,
          usedExports: true,
          warnings: 0,
        },
      ],
      name: ./fixtures/esm/abc.js + 3 modules,
      nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
      optimizationBailout: Array [],
      optional: false,
      orphan: false,
      postOrderIndex: 3,
      preOrderIndex: 0,
      providedExports: Array [],
      reasons: Array [
        Object {
          active: true,
          explanation: undefined,
          loc: undefined,
          moduleId: null,
          resolvedModuleId: null,
          type: entry,
          userRequest: ./fixtures/esm/abc,
        },
      ],
      size: 192,
      sizes: Object {
        javascript: 192,
      },
      type: module,
      usedExports: Array [],
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [],
      codeGenerated: false,
      dependent: undefined,
      depth: 1,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: undefined,
      identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/a.js,
      index: 1,
      index2: 0,
      issuer: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
      issuerId: undefined,
      issuerName: ./fixtures/esm/abc.js,
      issuerPath: Array [
        Object {
          id: undefined,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          name: ./fixtures/esm/abc.js,
        },
      ],
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/esm/a.js,
      nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/a.js,
      optimizationBailout: Array [],
      optional: false,
      orphan: true,
      postOrderIndex: 0,
      preOrderIndex: 1,
      providedExports: Array [
        a,
        default,
      ],
      reasons: Array [
        Object {
          active: true,
          explanation: undefined,
          loc: 1:0-24,
          moduleId: undefined,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          type: esm import,
          userRequest: ./a,
        },
        Object {
          active: true,
          explanation: undefined,
          loc: 5:0-1,
          moduleId: undefined,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          type: esm import specifier,
          userRequest: ./a,
        },
      ],
      size: 37,
      sizes: Object {
        javascript: 37,
      },
      type: module,
      usedExports: Array [
        a,
      ],
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [],
      codeGenerated: false,
      dependent: undefined,
      depth: 1,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: undefined,
      identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/b.js,
      index: 2,
      index2: 1,
      issuer: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
      issuerId: undefined,
      issuerName: ./fixtures/esm/abc.js,
      issuerPath: Array [
        Object {
          id: undefined,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          name: ./fixtures/esm/abc.js,
        },
      ],
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/esm/b.js,
      nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/b.js,
      optimizationBailout: Array [],
      optional: false,
      orphan: true,
      postOrderIndex: 1,
      preOrderIndex: 2,
      providedExports: Array [
        b,
        default,
      ],
      reasons: Array [
        Object {
          active: true,
          explanation: undefined,
          loc: 2:0-20,
          moduleId: undefined,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          type: esm import,
          userRequest: ./b,
        },
        Object {
          active: true,
          explanation: undefined,
          loc: 5:3-4,
          moduleId: undefined,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          type: esm import specifier,
          userRequest: ./b,
        },
      ],
      size: 38,
      sizes: Object {
        javascript: 38,
      },
      type: module,
      usedExports: Array [
        default,
      ],
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [],
      codeGenerated: false,
      dependent: undefined,
      depth: 1,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: undefined,
      identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/c.js,
      index: 3,
      index2: 2,
      issuer: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
      issuerId: undefined,
      issuerName: ./fixtures/esm/abc.js,
      issuerPath: Array [
        Object {
          id: undefined,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          name: ./fixtures/esm/abc.js,
        },
      ],
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/esm/c.js,
      nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/esm/c.js,
      optimizationBailout: Array [],
      optional: false,
      orphan: true,
      postOrderIndex: 2,
      preOrderIndex: 3,
      providedExports: Array [
        c,
        default,
      ],
      reasons: Array [
        Object {
          active: true,
          explanation: undefined,
          loc: 3:0-25,
          moduleId: undefined,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          type: esm import,
          userRequest: ./c,
        },
        Object {
          active: true,
          explanation: undefined,
          loc: 5:6-7,
          moduleId: undefined,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          moduleName: ./fixtures/esm/abc.js,
          resolvedModule: ./fixtures/esm/abc.js,
          resolvedModuleId: undefined,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/esm/abc.js,
          type: esm import specifier,
          userRequest: ./c,
        },
      ],
      size: 37,
      sizes: Object {
        javascript: 37,
      },
      type: module,
      usedExports: true,
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: false,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: false,
      depth: undefined,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: ,
      identifier: webpack/runtime/define_property_getters,
      index: undefined,
      index2: undefined,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: runtime,
      name: webpack/runtime/define_property_getters,
      nameForCondition: undefined,
      optimizationBailout: Array [],
      optional: false,
      orphan: false,
      postOrderIndex: undefined,
      preOrderIndex: undefined,
      providedExports: Array [],
      reasons: Array [],
      size: 285,
      sizes: Object {
        runtime: 285,
      },
      type: module,
      usedExports: null,
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: false,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: false,
      depth: undefined,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: ,
      identifier: webpack/runtime/has_own_property,
      index: undefined,
      index2: undefined,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: runtime,
      name: webpack/runtime/has_own_property,
      nameForCondition: undefined,
      optimizationBailout: Array [],
      optional: false,
      orphan: false,
      postOrderIndex: undefined,
      preOrderIndex: undefined,
      providedExports: Array [],
      reasons: Array [],
      size: 88,
      sizes: Object {
        runtime: 88,
      },
      type: module,
      usedExports: null,
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: false,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: false,
      depth: undefined,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: ,
      identifier: webpack/runtime/make_namespace_object,
      index: undefined,
      index2: undefined,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: runtime,
      name: webpack/runtime/make_namespace_object,
      nameForCondition: undefined,
      optimizationBailout: Array [],
      optional: false,
      orphan: false,
      postOrderIndex: undefined,
      preOrderIndex: undefined,
      providedExports: Array [],
      reasons: Array [],
      size: 274,
      sizes: Object {
        runtime: 274,
      },
      type: module,
      usedExports: null,
      warnings: 0,
    },
  ],
  namedChunkGroups: Object {
    main: Object {
      assets: Array [
        Object {
          name: main.js,
          size: 412,
        },
      ],
      assetsSize: 412,
      auxiliaryAssets: Array [],
      auxiliaryAssetsSize: 0,
      childAssets: Object {},
      children: Object {},
      chunks: Array [
        909,
      ],
      filteredAssets: 0,
      isOverSizeLimit: false,
      name: main,
    },
  },
  outputPath: <TEST_TOOLS_ROOT>/dist,
  publicPath: auto,
  warnings: Array [],
  warningsCount: 0,
}
`;

exports[`statsAPI statsAPI/ids should have ids when ids is true 1`] = `
Object {
  assets: Array [
    Object {
      auxiliaryChunkIdHints: Array [],
      auxiliaryChunkNames: Array [],
      auxiliaryChunks: Array [],
      cached: false,
      chunkIdHints: Array [],
      chunkNames: Array [
        main,
      ],
      chunks: Array [
        909,
      ],
      emitted: true,
      info: Object {
        chunkhash: Array [],
        contenthash: Array [],
        fullhash: Array [],
        isOverSizeLimit: false,
        javascriptModule: false,
        minimized: true,
        related: Object {},
      },
      name: main.js,
      size: 204,
      type: asset,
    },
  ],
  assetsByChunkName: Object {
    main: Array [
      main.js,
    ],
  },
  chunks: Array [
    Object {
      auxiliaryFiles: Array [],
      childrenByOrder: Object {},
      entry: true,
      files: Array [
        main.js,
      ],
      hash: 8bdcdc6d0d3368e4,
      id: 909,
      idHints: Array [],
      initial: true,
      names: Array [
        main,
      ],
      reason: undefined,
      rendered: true,
      runtime: Array [
        main,
      ],
      size: 55,
      sizes: Object {
        javascript: 55,
      },
      type: chunk,
    },
  ],
  filteredAssets: undefined,
  filteredModules: undefined,
  modules: Array [
    Object {
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: undefined,
      errors: 0,
      failed: false,
      id: 585,
      identifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
      index: 0,
      index2: 0,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/a.js,
      nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
      optional: false,
      orphan: false,
      postOrderIndex: 0,
      preOrderIndex: 0,
      size: 55,
      sizes: Object {
        javascript: 55,
      },
      type: module,
      warnings: 0,
    },
  ],
}
`;

exports[`statsAPI statsAPI/layer-stats should have module layer 1`] = `
Object {
  filteredModules: undefined,
  modules: Array [
    Object {
      children: Array [],
      issuer: ,
      issuerName: ,
      layer: test,
      size: 304,
      sizes: Object {
        javascript: 304,
      },
      type: modules by layer,
    },
    Object {
      children: Array [],
      issuer: ,
      issuerName: ,
      layer: legacy,
      size: 304,
      sizes: Object {
        javascript: 304,
      },
      type: modules by layer,
    },
  ],
}
`;

exports[`statsAPI statsAPI/with-query should output stats with query 1`] = `
Object {
  assets: Array [
    Object {
      auxiliaryChunkIdHints: Array [],
      auxiliaryChunkNames: Array [],
      auxiliaryChunks: Array [],
      cached: false,
      chunkIdHints: Array [],
      chunkNames: Array [
        main,
      ],
      chunks: Array [
        909,
      ],
      emitted: true,
      filteredRelated: 0,
      info: Object {
        chunkhash: Array [],
        contenthash: Array [],
        fullhash: Array [],
        isOverSizeLimit: false,
        javascriptModule: false,
        minimized: true,
        related: Object {},
      },
      isOverSizeLimit: false,
      name: main.js,
      related: Array [],
      size: 337,
      type: asset,
    },
  ],
  assetsByChunkName: Object {
    main: Array [
      main.js,
    ],
  },
  children: Array [],
  chunks: Array [
    Object {
      auxiliaryFiles: Array [],
      children: Array [],
      childrenByOrder: Object {},
      entry: true,
      files: Array [
        main.js,
      ],
      filteredModules: undefined,
      hash: 0bb68b976002ae99,
      id: 909,
      idHints: Array [],
      initial: true,
      modules: Array [
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [
            909,
          ],
          codeGenerated: true,
          dependent: true,
          depth: 2,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: 585,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
          index: 3,
          index2: 1,
          issuer: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
          issuerId: 432,
          issuerName: ./fixtures/c.js?c=3,
          issuerPath: Array [
            Object {
              id: 919,
              identifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
              name: ./fixtures/abc-query.js,
            },
            Object {
              id: 432,
              identifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
              name: ./fixtures/c.js?c=3,
            },
          ],
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/a.js,
          nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
          optimizationBailout: Array [
            Statement with side_effects in source code at ./fixtures/a.js<LINE_COL_RANGE>,
            ModuleConcatenation bailout: Module is not an ECMAScript module,
          ],
          optional: false,
          orphan: false,
          postOrderIndex: 1,
          preOrderIndex: 3,
          providedExports: null,
          reasons: Array [
            Object {
              active: true,
              explanation: undefined,
              loc: undefined,
              moduleId: 585,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
              moduleName: ./fixtures/a.js,
              resolvedModule: ./fixtures/a.js,
              resolvedModuleId: 585,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
              type: cjs self exports reference,
              userRequest: self,
            },
            Object {
              active: true,
              explanation: undefined,
              loc: 2:12-18,
              moduleId: 432,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
              moduleName: ./fixtures/c.js?c=3,
              resolvedModule: ./fixtures/c.js?c=3,
              resolvedModuleId: 432,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
              type: cjs require,
              userRequest: ./a,
            },
          ],
          size: 55,
          sizes: Object {
            javascript: 55,
          },
          source: module.exports = function a() {
	return "This is a";
};,
          type: module,
          usedExports: null,
          warnings: 0,
        },
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [
            909,
          ],
          codeGenerated: true,
          dependent: true,
          depth: 1,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: 958,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js?a=1,
          index: 1,
          index2: 0,
          issuer: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
          issuerId: 919,
          issuerName: ./fixtures/abc-query.js,
          issuerPath: Array [
            Object {
              id: 919,
              identifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
              name: ./fixtures/abc-query.js,
            },
          ],
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/a.js?a=1,
          nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
          optimizationBailout: Array [
            Statement with side_effects in source code at ./fixtures/a.js?a=1<LINE_COL_RANGE>,
            ModuleConcatenation bailout: Module is not an ECMAScript module,
          ],
          optional: false,
          orphan: false,
          postOrderIndex: 0,
          preOrderIndex: 1,
          providedExports: null,
          reasons: Array [
            Object {
              active: true,
              explanation: undefined,
              loc: undefined,
              moduleId: 958,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js?a=1,
              moduleName: ./fixtures/a.js?a=1,
              resolvedModule: ./fixtures/a.js?a=1,
              resolvedModuleId: 958,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js?a=1,
              type: cjs self exports reference,
              userRequest: self,
            },
            Object {
              active: true,
              explanation: undefined,
              loc: undefined,
              moduleId: 919,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
              moduleName: ./fixtures/abc-query.js,
              resolvedModule: ./fixtures/abc-query.js,
              resolvedModuleId: 919,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
              type: cjs export require,
              userRequest: ./a?a=1,
            },
          ],
          size: 55,
          sizes: Object {
            javascript: 55,
          },
          source: module.exports = function a() {
	return "This is a";
};,
          type: module,
          usedExports: null,
          warnings: 0,
        },
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [
            909,
          ],
          codeGenerated: true,
          dependent: false,
          depth: 0,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: 919,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
          index: 0,
          index2: 3,
          issuer: undefined,
          issuerId: undefined,
          issuerName: undefined,
          issuerPath: undefined,
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/abc-query.js,
          nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
          optimizationBailout: Array [
            Statement with side_effects in source code at ./fixtures/abc-query.js<LINE_COL>-31,
            ModuleConcatenation bailout: Module is not an ECMAScript module,
          ],
          optional: false,
          orphan: false,
          postOrderIndex: 3,
          preOrderIndex: 0,
          providedExports: Array [
            a,
            c,
          ],
          reasons: Array [
            Object {
              active: true,
              explanation: undefined,
              loc: undefined,
              moduleId: null,
              resolvedModuleId: null,
              type: entry,
              userRequest: ./fixtures/abc-query,
            },
          ],
          size: 99,
          sizes: Object {
            javascript: 99,
          },
          source: exports.a = require("./a?a=1");
// exports.b = require("./b?b=2");
exports.c = require("./c?c=3");,
          type: module,
          usedExports: Array [],
          warnings: 0,
        },
        Object {
          assets: Array [],
          buildTimeExecuted: false,
          built: true,
          cacheable: true,
          cached: false,
          chunks: Array [
            909,
          ],
          codeGenerated: true,
          dependent: true,
          depth: 1,
          errors: 0,
          failed: false,
          filteredReasons: undefined,
          id: 432,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
          index: 2,
          index2: 2,
          issuer: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
          issuerId: 919,
          issuerName: ./fixtures/abc-query.js,
          issuerPath: Array [
            Object {
              id: 919,
              identifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
              name: ./fixtures/abc-query.js,
            },
          ],
          layer: undefined,
          moduleType: javascript/auto,
          name: ./fixtures/c.js?c=3,
          nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/c.js,
          optimizationBailout: Array [
            Statement with side_effects in source code at ./fixtures/c.js?c=3<LINE_COL_RANGE>,
            ModuleConcatenation bailout: Module is not an ECMAScript module,
          ],
          optional: false,
          orphan: false,
          postOrderIndex: 2,
          preOrderIndex: 2,
          providedExports: null,
          reasons: Array [
            Object {
              active: true,
              explanation: undefined,
              loc: undefined,
              moduleId: 919,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
              moduleName: ./fixtures/abc-query.js,
              resolvedModule: ./fixtures/abc-query.js,
              resolvedModuleId: 919,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
              type: cjs export require,
              userRequest: ./c?c=3,
            },
            Object {
              active: true,
              explanation: undefined,
              loc: undefined,
              moduleId: 432,
              moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
              moduleName: ./fixtures/c.js?c=3,
              resolvedModule: ./fixtures/c.js?c=3,
              resolvedModuleId: 432,
              resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
              type: cjs self exports reference,
              userRequest: self,
            },
          ],
          size: 72,
          sizes: Object {
            javascript: 72,
          },
          source: module.exports = function b() {
	require("./a");
	return "This is c";
};,
          type: module,
          usedExports: null,
          warnings: 0,
        },
      ],
      names: Array [
        main,
      ],
      origins: Array [
        Object {
          loc: main,
          module: ,
          moduleId: undefined,
          moduleIdentifier: ,
          moduleName: ,
          request: ./fixtures/abc-query,
        },
      ],
      parents: Array [],
      reason: undefined,
      rendered: true,
      runtime: Array [
        main,
      ],
      siblings: Array [],
      size: 281,
      sizes: Object {
        javascript: 281,
      },
      type: chunk,
    },
  ],
  entrypoints: Object {
    main: Object {
      assets: Array [
        Object {
          name: main.js,
          size: 337,
        },
      ],
      assetsSize: 337,
      auxiliaryAssets: Array [],
      auxiliaryAssetsSize: 0,
      childAssets: Object {},
      children: Object {},
      chunks: Array [
        909,
      ],
      filteredAssets: 0,
      isOverSizeLimit: false,
      name: main,
    },
  },
  env: undefined,
  errors: Array [],
  errorsCount: 0,
  filteredAssets: undefined,
  filteredModules: undefined,
  hash: 3216932f66b52894,
  modules: Array [
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: undefined,
      depth: 0,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: 919,
      identifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
      index: 0,
      index2: 3,
      issuer: undefined,
      issuerId: undefined,
      issuerName: undefined,
      issuerPath: undefined,
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/abc-query.js,
      nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
      optimizationBailout: Array [
        Statement with side_effects in source code at ./fixtures/abc-query.js<LINE_COL>-31,
        ModuleConcatenation bailout: Module is not an ECMAScript module,
      ],
      optional: false,
      orphan: false,
      postOrderIndex: 3,
      preOrderIndex: 0,
      providedExports: Array [
        a,
        c,
      ],
      reasons: Array [
        Object {
          active: true,
          explanation: undefined,
          loc: undefined,
          moduleId: null,
          resolvedModuleId: null,
          type: entry,
          userRequest: ./fixtures/abc-query,
        },
      ],
      size: 99,
      sizes: Object {
        javascript: 99,
      },
      source: exports.a = require("./a?a=1");
// exports.b = require("./b?b=2");
exports.c = require("./c?c=3");,
      type: module,
      usedExports: Array [],
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: undefined,
      depth: 1,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: 958,
      identifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js?a=1,
      index: 1,
      index2: 0,
      issuer: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
      issuerId: 919,
      issuerName: ./fixtures/abc-query.js,
      issuerPath: Array [
        Object {
          id: 919,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
          name: ./fixtures/abc-query.js,
        },
      ],
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/a.js?a=1,
      nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
      optimizationBailout: Array [
        Statement with side_effects in source code at ./fixtures/a.js?a=1<LINE_COL_RANGE>,
        ModuleConcatenation bailout: Module is not an ECMAScript module,
      ],
      optional: false,
      orphan: false,
      postOrderIndex: 0,
      preOrderIndex: 1,
      providedExports: null,
      reasons: Array [
        Object {
          active: true,
          explanation: undefined,
          loc: undefined,
          moduleId: 958,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js?a=1,
          moduleName: ./fixtures/a.js?a=1,
          resolvedModule: ./fixtures/a.js?a=1,
          resolvedModuleId: 958,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js?a=1,
          type: cjs self exports reference,
          userRequest: self,
        },
        Object {
          active: true,
          explanation: undefined,
          loc: undefined,
          moduleId: 919,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
          moduleName: ./fixtures/abc-query.js,
          resolvedModule: ./fixtures/abc-query.js,
          resolvedModuleId: 919,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
          type: cjs export require,
          userRequest: ./a?a=1,
        },
      ],
      size: 55,
      sizes: Object {
        javascript: 55,
      },
      source: module.exports = function a() {
	return "This is a";
};,
      type: module,
      usedExports: null,
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: undefined,
      depth: 1,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: 432,
      identifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
      index: 2,
      index2: 2,
      issuer: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
      issuerId: 919,
      issuerName: ./fixtures/abc-query.js,
      issuerPath: Array [
        Object {
          id: 919,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
          name: ./fixtures/abc-query.js,
        },
      ],
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/c.js?c=3,
      nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/c.js,
      optimizationBailout: Array [
        Statement with side_effects in source code at ./fixtures/c.js?c=3<LINE_COL_RANGE>,
        ModuleConcatenation bailout: Module is not an ECMAScript module,
      ],
      optional: false,
      orphan: false,
      postOrderIndex: 2,
      preOrderIndex: 2,
      providedExports: null,
      reasons: Array [
        Object {
          active: true,
          explanation: undefined,
          loc: undefined,
          moduleId: 919,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
          moduleName: ./fixtures/abc-query.js,
          resolvedModule: ./fixtures/abc-query.js,
          resolvedModuleId: 919,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
          type: cjs export require,
          userRequest: ./c?c=3,
        },
        Object {
          active: true,
          explanation: undefined,
          loc: undefined,
          moduleId: 432,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
          moduleName: ./fixtures/c.js?c=3,
          resolvedModule: ./fixtures/c.js?c=3,
          resolvedModuleId: 432,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
          type: cjs self exports reference,
          userRequest: self,
        },
      ],
      size: 72,
      sizes: Object {
        javascript: 72,
      },
      source: module.exports = function b() {
	require("./a");
	return "This is c";
};,
      type: module,
      usedExports: null,
      warnings: 0,
    },
    Object {
      assets: Array [],
      buildTimeExecuted: false,
      built: true,
      cacheable: true,
      cached: false,
      chunks: Array [
        909,
      ],
      codeGenerated: true,
      dependent: undefined,
      depth: 2,
      errors: 0,
      failed: false,
      filteredReasons: undefined,
      id: 585,
      identifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
      index: 3,
      index2: 1,
      issuer: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
      issuerId: 432,
      issuerName: ./fixtures/c.js?c=3,
      issuerPath: Array [
        Object {
          id: 919,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/abc-query.js,
          name: ./fixtures/abc-query.js,
        },
        Object {
          id: 432,
          identifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
          name: ./fixtures/c.js?c=3,
        },
      ],
      layer: undefined,
      moduleType: javascript/auto,
      name: ./fixtures/a.js,
      nameForCondition: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
      optimizationBailout: Array [
        Statement with side_effects in source code at ./fixtures/a.js<LINE_COL_RANGE>,
        ModuleConcatenation bailout: Module is not an ECMAScript module,
      ],
      optional: false,
      orphan: false,
      postOrderIndex: 1,
      preOrderIndex: 3,
      providedExports: null,
      reasons: Array [
        Object {
          active: true,
          explanation: undefined,
          loc: undefined,
          moduleId: 585,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
          moduleName: ./fixtures/a.js,
          resolvedModule: ./fixtures/a.js,
          resolvedModuleId: 585,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/a.js,
          type: cjs self exports reference,
          userRequest: self,
        },
        Object {
          active: true,
          explanation: undefined,
          loc: 2:12-18,
          moduleId: 432,
          moduleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
          moduleName: ./fixtures/c.js?c=3,
          resolvedModule: ./fixtures/c.js?c=3,
          resolvedModuleId: 432,
          resolvedModuleIdentifier: <TEST_TOOLS_ROOT>/tests/fixtures/c.js?c=3,
          type: cjs require,
          userRequest: ./a,
        },
      ],
      size: 55,
      sizes: Object {
        javascript: 55,
      },
      source: module.exports = function a() {
	return "This is a";
};,
      type: module,
      usedExports: null,
      warnings: 0,
    },
  ],
  namedChunkGroups: Object {
    main: Object {
      assets: Array [
        Object {
          name: main.js,
          size: 337,
        },
      ],
      assetsSize: 337,
      auxiliaryAssets: Array [],
      auxiliaryAssetsSize: 0,
      childAssets: Object {},
      children: Object {},
      chunks: Array [
        909,
      ],
      filteredAssets: 0,
      isOverSizeLimit: false,
      name: main,
    },
  },
  outputPath: <TEST_TOOLS_ROOT>/dist,
  publicPath: auto,
  warnings: Array [],
  warningsCount: 0,
}
`;
